// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consumer test with buffer object 1`] = `
Object {
  "test": "buffertest",
}
`;

exports[`Consumer test with buffer object 2`] = `1`;

exports[`Consumer test with buffer object 3`] = `
Array [
  Array [
    Object {
      "test": "buffertest",
    },
  ],
]
`;

exports[`Consumer test with buffer string 1`] = `"buffertest"`;

exports[`Consumer test with buffer string 2`] = `1`;

exports[`Consumer test with buffer string 3`] = `
Array [
  Array [
    "buffertest",
  ],
]
`;

exports[`Consumer test with object 1`] = `
Object {
  "test": "cool",
}
`;

exports[`Consumer test with object 2`] = `1`;

exports[`Consumer test with object 3`] = `
Array [
  Array [
    Object {
      "test": "cool",
    },
  ],
]
`;

exports[`Consumer test with string 1`] = `"test"`;

exports[`Consumer test with string 2`] = `1`;

exports[`Consumer test with string 3`] = `
Array [
  Array [
    "test",
  ],
]
`;

exports[`Errors with bad config 1`] = `[Error: Error for 'application.amqp' value{"isJoi":true,"name":"ValidationError","details":[{"message":"/"value/" must be an object","path":[],"type":"object.base","context":{"label":"value"}},{"message":"/"value/" must be an array","path":[],"type":"array.base","context":{"label":"value"}}],"_object":"bad"}]`;

exports[`Errors with bad url 1`] = `[Error: getaddrinfo ENOTFOUND bad bad:5672]`;

exports[`Errors without config folder 1`] = `[Error: AmqpPluginConfig AmqpConfig is mandatory]`;

exports[`Errors without queueName 1`] = `[Error: Error for 'application.amqp' value{"isJoi":true,"name":"ValidationError","details":[{"message":"/"queueName/" is required","path":["queues","queueTest","queueName"],"type":"any.required","context":{"key":"queueName","label":"queueName"}},{"message":"/"name/" is not allowed","path":["queues","queueTest","name"],"type":"object.allowUnknown","context":{"child":"name","key":"name","label":"name"}},{"message":"/"value/" must be an array","path":[],"type":"array.base","context":{"label":"value"}}],"_object":{"url":"amqp://bad","queues":{"queueTest":{"name":"lol"}}}}]`;

exports[`Listener test with buffer object 1`] = `
Object {
  "test": "buffertest",
}
`;

exports[`Listener test with buffer object 2`] = `1`;

exports[`Listener test with buffer object 3`] = `
Array [
  Array [
    Object {
      "test": "buffertest",
    },
  ],
]
`;

exports[`Listener test with buffer string 1`] = `"buffertest"`;

exports[`Listener test with buffer string 2`] = `1`;

exports[`Listener test with buffer string 3`] = `
Array [
  Array [
    "buffertest",
  ],
]
`;

exports[`Listener test with object 1`] = `
Object {
  "test": "cool",
}
`;

exports[`Listener test with object 2`] = `1`;

exports[`Listener test with object 3`] = `
Array [
  Array [
    Object {
      "test": "cool",
    },
  ],
]
`;

exports[`Listener test with string 1`] = `"test"`;

exports[`Listener test with string 2`] = `1`;

exports[`Listener test with string 3`] = `
Array [
  Array [
    "test",
  ],
]
`;

exports[`bad queue 1`] = `[Error: queue "consumerTestBad" doesn't exist]`;

exports[`consumer throw error 1`] = `Object {}`;

exports[`consumer throw error 2`] = `1`;

exports[`consumer throw error 3`] = `
Array [
  Array [
    "test",
  ],
]
`;

exports[`must fail when CUnit not found 1`] = `[Error: Connection bad not found]`;

exports[`must fail when getConnection not found 1`] = `"Connection notfound not found"`;

exports[`must fail with duplicate connections 1`] = `[Error: Duplicate connection connection1]`;

exports[`sendAndReceive timeout 1`] = `[Error: operation timed out]`;

exports[`start 2 times 1`] = `"testCase.content"`;

exports[`start 2 times 2`] = `1`;

exports[`start 2 times 3`] = `
Array [
  Array [
    "testCase.content",
  ],
]
`;

exports[`with config 2 database 1`] = `"connection1testCase"`;

exports[`with config 2 database 2`] = `"connection1testCase"`;

exports[`with one connection with name and entity without cunit 1`] = `"testCase.content"`;

exports[`with one connection with name and entity without cunit 2`] = `1`;

exports[`with one connection with name and entity without cunit 3`] = `
Array [
  Array [
    "testCase.content",
  ],
]
`;
